<resources>
    <string name="app_name">dmd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_like">1 Likes</string>
    <string name="meme_picture">meme_picture</string>
    <string name="bottom_text_preview">Bottom Text Preview</string>
    <string name="top_text_preview">Top Text Preview</string>
    <string name="meme_preview">Meme Preview</string>
    <string name="image_url">Image URL</string>
    <string name="top_text">Top Text</string>
    <string name="bottom_text">Bottom Text</string>
    <string name="submit">Submit</string>
    <string name="sample_date">2022-12-25 01:20:37</string>
    <string name="default_comment">5 comments</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="hide_my_name">Hide my name</string>
    <string name="NotConnected">Not Connected</string>
    <string name="url_insert_image">https://ubaya.fun/native/160420108/profilpic</string>
</resources>