<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frameLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_meme2"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:contentDescription="@string/meme_picture"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tv_meme_top_text2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:gravity="center|top"
                    android:text="@string/top_text_preview"
                    android:textSize="30sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_meme_bottom_text2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:gravity="bottom|center"
                    android:text="@string/bottom_text_preview"
                    android:textSize="30sp"
                    tools:ignore="TextContrastCheck" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_meme_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sample_date"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

            <Button
                android:id="@+id/btn_detail_meme"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:icon="@drawable/ic_baseline_chat_24"
                app:iconGravity="end"
                app:iconSize="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_meme_date"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btn_like_preview"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:icon="@drawable/ic_baseline_thumb_up_24"
                app:iconSize="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_meme_date"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_like"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_like_preview"
                app:layout_constraintTop_toBottomOf="@+id/tv_meme_date" />

            <TextView
                android:id="@+id/tv_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_comment"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_detail_meme"
                app:layout_constraintTop_toBottomOf="@+id/tv_meme_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>